- Fixed bug #46578 (strip_tags() does not honor end-of-comment when it encounters a single quote)